# python

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  regex.py
appisle/: asgi.py  settings.py  urls.py  wsgi.py
stateManager/: memoryStore.py
views/: layout.py
widgets/: board.py  boards.py  item.py  sidebar.py
